Fix css blurred background

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   left:0;
   overflow-x: hidden;
   backdrop-filter: blur(10px);
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.351);
   padding-left: 20px;
 }
 
@@ -36,6 +36,7 @@
   padding-right:20px;
   align-items: center;
   width:100%;
+  
 }
 
 h1 {
