--- a/src/Components/card.css
+++ b/src/Components/card.css
@@ -1,11 +1,10 @@
 .Card {
-
     width: 30%;
-    box-shadow: 0 15px 25px rgba(129, 124, 124, 0.2);
+    box-shadow: 0 15px 25px rgba(255, 255, 255, 0.351);
     font-size: medium;
     border-radius: 24px;
     backdrop-filter: blur(10px);
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.351);
     text-align: center;
     margin-bottom: 30px;
 }
