--- a/src/Components/list.css
+++ b/src/Components/list.css
@@ -5,7 +5,7 @@
   font-size: medium;
   border-radius: 24px;
   backdrop-filter: blur(10px);
-  background-color: rgba(255, 255, 255, 0.005);
+  background-color: rgba(255, 255, 255, 0.351);
   text-align: center;
   padding: 20px;
   padding-bottom: 40px;
