--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  background-image: url("../public/pokemon-unsplash.jpg");
+  background-image: url("../public/pokeball-unsplash.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
